[package]
name = "lnkds"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
clap = "3.0.0-beta.4"
futures = "0.3.12"
async-trait = "0.1.51"
serde_json = "1.0.59"
serde = "1.0.128"
rand = "0.8.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
